# kaya-gnome

./: README.md  ca.deobald.Kaya.json  meson.build  package-lock.json  package.json  tsconfig.json
data/: ca.deobald.Kaya.DBus.xml  ca.deobald.Kaya.desktop.in  ca.deobald.Kaya.gschema.xml  ca.deobald.Kaya.metainfo.xml.in  ca.deobald.Kaya.service.in  ca.deobald.Kaya.xml  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: ca.deobald.Kaya.data.gresource.xml  ca.deobald.Kaya.src.gresource.xml  dbus.ts  main.js  main.ts  meson.build  shortcuts-dialog.ui  window.ts  window.ui
